--- a/web/homes/homeDoctor.xhtml
+++ b/web/homes/homeDoctor.xhtml
@@ -176,14 +176,14 @@
                 </article>  
 
                 <article class="tile">
-                    <a href="../doctor/VistaEnfermedad.xhtml">
+                    <a href="../Doctor/VistaEnfermedad.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi "><img class="title-icon" src="../resources/imgs/Doctor/virus.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Enfermedades</div>
                     </a>
                 </article>
 
                 <article class="tile">
-                    <a href="../doctor/BuscarRevisionGeneral.xhtml">
+                    <a href="../Doctor/BuscarRevisionGeneral.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/xray.png" width="60" height="60"></img></i></div>
                         <div class="tile-num full-reset">Revisión</div>
                     </a>
@@ -191,14 +191,14 @@
                 
 
                 <article class="tile">
-                    <a href="../doctor/ModificarCita.xhtml">
+                    <a href="../Doctor/ModificarCita.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/calendar.png" width="60" height="60"></img></i></div>
                         <div class="tile-num full-reset">Modificar Citas</div>
                     </a>
                 </article>
 
                 <article class="tile">
-                    <a href="../doctor/BuscarCita.xhtml">
+                    <a href="../Doctor/BuscarCita.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/calendar.png" width="60" height="60"></img></i></div>
                         <div class="tile-num full-reset">Buscar Citas</div>
                     </a>
