--- a/web/Doctor/IngresoEnfermedad.xhtml
+++ b/web/Doctor/IngresoEnfermedad.xhtml
@@ -27,7 +27,7 @@
 
     </h:head>
     <h:body>
-
+        <f:event type="preRenderView" listener="#{controlador.verificarSesion()}"/>
         <f:event type="preRenderView" listener="#{examenBean.listarExamen()}"/>
         <f:event type="preRenderView" listener="#{categoriaExamenBean.listarCategoriaExamen()}"/>
 
@@ -43,7 +43,7 @@
                     <figure>
                         <img src="../resources/imgs/Doctor/doctor.png" alt="ClinicaMedica" class="img-responsive center-box" style="width:55%;"/>
                     </figure>
-                    <p class="text-center" style="padding-top: 15px;">Sistema Administrativo Doctor</p>
+                    <p class="text-center" style="font: bold small-caps 120%/200% serif; padding-top: 15px">Doctor #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
                 </div>
                 <div class="full-reset nav-lateral-list-menu">
                     <ul class="list-unstyled">
@@ -73,7 +73,7 @@
                         <img src="../resources/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
                     </figure>
                     <li style="color:#fff; cursor:default;">
-                        <span class="all-tittles">Admin Name</span>
+                        <span class="all-tittles">#{controlador.usu.nombre} #{controlador.usu.apellido}</span>
                     </li>
                     <li  class="tooltips-general exit-system-button" data-href="index.html" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
