actualizacion casi finalizada ADMIN

--- a/web/Administrador/RegistroAdmin.xhtml
+++ b/web/Administrador/RegistroAdmin.xhtml
@@ -77,7 +77,8 @@
                         <li><a href="faces/../RegistroAdmin.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Administrador</a></li>
                         <li><a href="faces/../RegistroNoExistente.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp;Registro nuevo empleado</a></li>
                         <li><a href="faces/../Mantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-alert-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento Personal</a></li>
-                        <li><a href="faces/../rptBusquedaEmpleado.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-search zmdi-hc-fw"></i>&nbsp;&nbsp; Busqueda Empleados</a></li>
+                        <li><a href="faces/../rptBusquedaEmpleado.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-search zmdi-hc-fw"></i>&nbsp;&nbsp; Busqueda Historial Empleados</a></li>
+                        <li><a href="faces/../rptBusquedaPaciente.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-search zmdi-hc-fw"></i>&nbsp;&nbsp; Busqueda Historial Paciente</a></li>
 
                         <!-- FIn del Menu lateral -->
 
