--- a/web/Mantenimiento/listaExameness.xhtml
+++ b/web/Mantenimiento/listaExameness.xhtml
@@ -6,7 +6,7 @@
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:p="http://primefaces.org/ui">
   <h:head>
-    <title>Personal Empleados</title>
+    <title>Mantenimiento</title>
     <meta charset="UTF-8"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -55,19 +55,19 @@
       <div class="full-reset container-menu-movile custom-scroll-containers">
         <div class="logo full-reset all-tittles">
           <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-          sistema clinica medica
+          Mantenimiento clinica medica
         </div>
         <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
           <figure>
-            <img src="../resources/imgs/Admin/boss.png" class="img-responsive center-box" style="width:55%;"/>
+            <img src="../resources/imgs/imagenes_mantenimiento/worker.png" class="img-responsive center-box" style="width:55%;"/>
           </figure>
-          <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Administrador #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+          <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Usuario #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
         </div>
         <div class="full-reset nav-lateral-list-menu">
           <ul class="list-unstyled">
 
             <!-- Menu lateral-->
-            <li><a href="../faces/homes/homeAdmin.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
+            <li><a href="../homes/homeMantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
             <li><a href="faces/../RegistroAdmin.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Administrador</a></li>
             <li><a href="faces/../RegistroNoExistente.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp;Registro nuevo empleado</a></li>
             <li><a href="faces/../Mantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-alert-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento Personal</a></li>
@@ -85,7 +85,7 @@
       <nav class="navbar-user-top full-reset">
         <ul class="list-unstyled full-reset">
           <figure>
-            <img src="../resources/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
+            <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user-picture" class="img-responsive img-circle center-box"/>
           </figure>
           <li style="color:#fff; cursor:default;">
             <span class="all-tittles"> #{controlador.usu.nombre} #{controlador.usu.apellido} </span>
@@ -104,12 +104,12 @@
 
       <div class="container">
         <div class="page-header">
-          <h1 class="all-tittles">Sistema Clinicamedica <small>Administración de empleados</small></h1>
+          <h1 class="all-tittles">Mantenimiento Sistema Clinicamedica <small>Mantenimiento Examenes</small></h1>
         </div>
       </div>
 
       <div class="container-fluid">
-        <h1 align="center" style=" font: bold small-caps 420%/200% serif;">Reporte de empleados</h1>
+        <h1 align="center" style=" font: bold small-caps 420%/200% serif;">Listado de Examenes</h1>
       </div>
 
       <br/><br/>
@@ -118,10 +118,10 @@
       <div class="container-fluid"  style="margin: 50px 0;">
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-md-3">
-            <img src="../resources/assets/img/user01.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
+            <img src=".../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
           </div>
           <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead" style=" font: bold small-caps 120%/200% serif;">
-            Bienvenido a la seccion de reportes al cual podra obtener informacion total de los siguiente modulos.
+            Bienvenido a la seccion de registro del listado de Examenes. 
           </div>
         </div>
       </div>
