--- a/web/Mantenimiento/Examen.xhtml
+++ b/web/Mantenimiento/Examen.xhtml
@@ -5,7 +5,7 @@
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
   <h:head>
-    <title>Panel de Control</title>
+    <title>Mantenimiento</title>
     <!-- Esta pagina representa el panel de control principal de el administrador -->
 
     <meta charset="UTF-8"/>
@@ -46,13 +46,13 @@
       <div class="full-reset container-menu-movile custom-scroll-containers">
         <div class="logo full-reset all-tittles">
           <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-          Doctor
+          Mantenimiento clinica medica
         </div>
         <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
           <figure>
-            <img src="../imagen/doctor.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;"/>
+            <img src="../resources/imgs/imagenes_mantenimiento/worker.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;"/>
           </figure>
-          <p class="text-center" style="padding-top: 15px;">Sistema Administrativo Doctor</p>
+          <p class="text-center" style="padding-top: 15px;">Sistema de Mantenimiento</p>
         </div>
 
 
@@ -61,7 +61,7 @@
           <ul class="list-unstyled">
 
 
-            <li><a href="home.html"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
+            <li><a href="../homes/homeMantenimiento.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
             <li>
               <div class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
@@ -95,12 +95,12 @@
       <nav class="navbar-user-top full-reset">
         <ul class="list-unstyled full-reset">
           <figure>
-            <img src="assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
+            <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user-picture" class="img-responsive img-circle center-box"/>
           </figure>
           <li style="color:#fff; cursor:default;">
             <span class="all-tittles">Admin Name</span>
           </li>
-          <li  class="tooltips-general exit-system-button" data-href="index.html" data-placement="bottom" title="Salir del sistema">
+          <li  class="tooltips-general exit-system-button" data-href="../homes/homeMantenimiento.xhtml" data-placement="bottom" title="Salir del sistema">
             <i class="zmdi zmdi-power"></i>
           </li>
           <li  class="tooltips-general search-persona-button" data-placement="bottom" title="Ayuda">
@@ -113,17 +113,17 @@
       </nav>
       <div class="container">
         <div class="page-header">
-          <h1 class="all-tittles">Sistema Clinicamedica <small>Administración de pacientes</small></h1>
+          <h1 class="all-tittles">Mantenimiento Sistema Clinicamedica <small>Mantenimiento Examenes</small></h1>
         </div>
       </div>
 
       <div class="container-fluid"  style="margin: 50px 0;">
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-md-3">
-            <img src="assets/img/user01.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
+            <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
           </div>
           <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
-            Bienvenido a la sección mantenimiento de medicamento
+            Bienvenido a la sección mantenimiento de examenens
           </div>
         </div>
       </div>
